search limits support

--- a/demo-shell/src/app.config.json
+++ b/demo-shell/src/app.config.json
@@ -52,6 +52,10 @@
         }
     ],
     "search": {
+      "limits": {
+        "permissionEvaluationTime": null,
+        "permissionEvaluationCount": null
+      },
       "facets": [
         {
           "id": "broken",
