move custom search to 'search.query' config

--- a/demo-shell/src/app.config.json
+++ b/demo-shell/src/app.config.json
@@ -56,8 +56,9 @@
         "permissionEvaluationTime": null,
         "permissionEvaluationCount": null
       },
-      "facets": [
-        {
+      "query": {
+        "categories": [
+          {
           "id": "broken",
           "name": "Broken Facet",
           "enabled": false,
@@ -131,7 +132,8 @@
             }
           }
         }
-      ]
+        ]
+      }
     },
     "pagination": {
         "size": 25,
