--- a/demo-shell/src/app.config.json
+++ b/demo-shell/src/app.config.json
@@ -56,6 +56,24 @@
         "permissionEvaluationTime": null,
         "permissionEvaluationCount": null
       },
+      "facetFields": {
+        "facets": [
+          { "field": "content.mimetype", "mincount": 1, "label": "Type" },
+          { "field": "content.size", "mincount": 1, "label": "Size" },
+          { "field": "creator", "mincount": 1, "label": "Creator" },
+          { "field": "modifier", "mincount": 1, "label": "Modifier" }
+        ]
+      },
+      "facetQueries": [
+        { "query": "created:2018", "label": "CreatedThisYear" },
+        { "query": "content.mimetype", "label": "Type" },
+        { "query": "content.size:[0 TO 10240]", "label": "xtra small"},
+        { "query": "content.size:[10240 TO 102400]", "label": "small"},
+        { "query": "content.size:[102400 TO 1048576]", "label": "medium" },
+        { "query": "content.size:[1048576 TO 16777216]", "label": "large" },
+        { "query": "content.size:[16777216 TO 134217728]", "label": "xtra large" },
+        { "query": "content.size:[134217728 TO MAX]", "label": "XX large" }
+      ],
       "query": {
         "categories": [
           {
