--- a/demo-shell/src/app.config.json
+++ b/demo-shell/src/app.config.json
@@ -56,6 +56,10 @@
         "permissionEvaluationTime": null,
         "permissionEvaluationCount": null
       },
+      "filterQueries": [
+        { "query": "TYPE:'cm:folder' OR TYPE:'cm:content'" },
+        { "query": "NOT cm:creator:System" }
+      ],
       "facetFields": {
         "facets": [
           { "field": "content.mimetype", "mincount": 1, "label": "Type" },
