--- a/demo-shell/package.json
+++ b/demo-shell/package.json
@@ -63,10 +63,10 @@
   ],
   "private": true,
   "dependencies": {
-    "@alfresco/adf-content-services": "2.3.0-beta2",
-    "@alfresco/adf-core": "2.3.0-beta2",
-    "@alfresco/adf-insights": "2.3.0-beta2",
-    "@alfresco/adf-process-services": "2.3.0-beta2",
+    "@alfresco/adf-content-services": "2.3.0-beta3",
+    "@alfresco/adf-core": "2.3.0-beta3",
+    "@alfresco/adf-insights": "2.3.0-beta3",
+    "@alfresco/adf-process-services": "2.3.0-beta3",
     "@angular/animations": "5.1.1",
     "@angular/cdk": "5.0.1",
     "@angular/common": "5.1.1",
@@ -82,7 +82,7 @@
     "@mat-datetimepicker/core": "^1.0.1",
     "@mat-datetimepicker/moment": "^1.0.1",
     "@ngx-translate/core": "9.1.1",
-    "alfresco-js-api": "2.3.0-efa7130dee02699999cfdb9e96ddba8763dcc1a8",
+    "alfresco-js-api": "2.3.0-beta3",
     "chart.js": "2.5.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.4.1",
