--- a/demo-shell/src/app.config.json
+++ b/demo-shell/src/app.config.json
@@ -93,20 +93,21 @@
           }
         },
         {
-          "id": "facet1",
+          "id": "queryName",
           "name": "Name",
           "enabled": true,
           "expanded": true,
           "component": {
             "selector": "adf-search-text",
             "settings": {
+              "pattern": "cm:name:'(.*?)'",
               "field": "cm:name",
               "placeholder": "Enter the name"
             }
           }
         },
         {
-          "id": "facet2",
+          "id": "queryFields",
           "name": "Fields",
           "enabled": true,
           "expanded": false,
@@ -124,7 +125,7 @@
           }
         },
         {
-          "id": "facet3",
+          "id": "queryType",
           "name": "Type",
           "enabled": true,
           "expanded": false,
@@ -142,7 +143,7 @@
           }
         },
         {
-          "id": "facet4",
+          "id": "queryLocations",
           "name": "Locations",
           "enabled": true,
           "expanded": false,
